--- a/coloc_duty/src/main/resources/application.properties
+++ b/coloc_duty/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc\:mysql\://localhost/coloc_duty?serverTimezone\=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
